# mjbot_2023

./: .gitignore  README.md  ROS_install.md  User_Guide.md  User_Guide_en.md  bat_percent.json  bat_time.json  requirements.txt  setup.sh  startup_myoungja.sh  user_danger.json  user_gps.json  user_value.json
src/: ex.py  ros2.repos
src/mjbot_alert/: CMakeLists.txt  mjbot_alert.py  msg.py  package.xml  requirements.txt
src/mjbot_alert/Alert/: bk.py  etcdefaultgpsd  gps_device.py  gps_main.py  gps_set.py  gps_start.py  messageSending.py  message_send.py
src/mjbot_alert_voice/: CMakeLists.txt  README.md  VoicePublisher.py  main.py  mjbot_alert_voice.py  package.xml  setup.py
src/mjbot_alert_voice/Alert/: gps_device.py  messageSending.py
src/mjbot_alert_voice/Chat/: negativeResult.json  voiceChat.py
src/mjbot_arm_control/: CMakeLists.txt  package.xml
src/mjbot_arm_control/launch/: mjbot_arm_control.launch.py
src/mjbot_arm_control/scripts/: mjbot_arm_control.py
src/mjbot_arm_description/: CMakeLists.txt  README.md  package.xml
src/mjbot_arm_description/config/: controllers.yaml
src/mjbot_arm_description/ros2_control/: mjbot_arm.ros2_control.xacro
src/mjbot_arm_description/urdf/: mjbot_arm.urdf  mjbot_arm.urdf.xacro
src/mjbot_base_control/: CMakeLists.txt  package.xml
src/mjbot_base_control/config/: arm_controllers.yaml
src/mjbot_base_control/launch/: mjbot_control.launch.py
src/mjbot_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/mjbot_bringup/config/: joystick.yaml  twist_mux.yaml
src/mjbot_bringup/launch/: mjbot_bringup.launch.py  rviz.launch.py  teleop_joystick.launch.py
src/mjbot_control/: CMakeLists.txt  neck_controller.py  package.xml
src/mjbot_control/config/: arm_controllers.yaml  diff_drive_controller.yaml  mjbot_controller.yaml  servo_controllers.yaml
src/mjbot_control/launch/: mjbot_control.launch.py
src/mjbot_control/scripts/: arm_control_node.py  example_act_arm_control.py  example_pub_arm_control.py  holding_hand_mode.py  idle_mode.py  joystic_test.py  mjbot_arm_control.py  neck _yawex.py  neck_control_node.py  neck_controller.py  person_tracking_launcher.py  random_move_mode.py  tracking_mode.py
src/mjbot_description/: CMakeLists.txt  README.md  package.xml
src/mjbot_description/launch/: mjbot_description.launch.py  view_mjbot.launch.py
src/mjbot_description/urdf/: mjbot.urdf.xacro  mjbot_description.urdf.xacro
src/mjbot_description/urdf/include/: mjbot_control.urdf.xacro
src/mjbot_description/urdf/ros2_control/: arm.ros2_control.xacro  mjbot_arm.ros2_control.xacro  mjbot_arm_control_gazebo.xacro  mjbot_base_control.urdf.xacro  mjbot_servos.ros2_control.xacro
src/mjbot_neck_control/: CMakeLists.txt  README.md  package.xml  run_trakcing.sh
src/mjbot_neck_control/mjbot_neck_control/: person_tracking_launcher.py
src/mjbot_neck_control/msg/: Float4.msg
src/mjbot_opi_esp_bridge/: package.xml  setup.cfg  setup.py
src/mjbot_opi_esp_bridge/opi_esp/: fake_cmd_pub.py  main.py
src/mjbot_random_move/: package.xml  random_move.py  setup.py
src/mjbot_random_move/mjbot_random_move/: mjbot_random_move.py
src/mjbot_tracking/: CMakeLists.txt  package.xml  person_tracking_launcher.py
src/mjbot_tracking/scripts/: arm_control_node.py  tracking.py
src/mjbot_vision/: README.md  package.xml
src/mjbot_vision/vision/: depth.py  graph.py  log.csv  main.py  sort.py  yolo.py  yolov5.py  yolov7.py
src/mjbot_vision2/: .gitignore  CMakeLists.txt  package.xml  setup.py
src/mjbot_vision2/mjbot_vision2/: main.py
src/mjbot_vision2/vision/: main.py  mjbot_vision2.py  yolo.py
src/mjbot_vision2/vision/scripts/: depth.py  sort.py  yolo.py
src/mjbot_vision2/vision/scripts/utils/: coco_utils.py
src/mjbot_vision2/vision/trace/: alerter.py  object_tracer.py
src/mjbot_vision_pose/: package.xml  setup.py
src/mjbot_vision_pose/visionp/: main.py
src/mjbot_vision_v7/: package.xml  setup.py
src/mjbot_vision_v7/vision/: main.py
src/mjbot_voice/: CMakeLists.txt  README.md  list.py  mjbot_voice.py  package.xml  requirements.txt  setup.cfg  tes.py  test.py  user_value.json  wakeword.py
src/mjbot_voice/Chat/: voiceChat.py
src/mjbot_voice/models/: Lo_vot.tflite  ha__E.tflite  hey.tflite  hi.tflite  ro_bot.onnx  ro_bot.tflite  명자야_ko_raspberry-pi_v3_0_0.ppn
user_data/: bat_percent.json  bat_time.json  language_select.json  user_danger.json  user_disease.json  user_gps.json  user_value.json
