<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mjbot_arm_description</name>
  <version>0.1.0</version>
  <description>mjbot_arm_description robot description</description>
  <maintainer email="dhkdwk0215@naver.com">Kimsh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
