<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mjbot_control</name>
  <version>0.0.10</version>
  <description>ROS package for controlling mjbot</description>
  <maintainer email="dhkdwk0215@naver.com">drcl</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
